[project]
name = "hello-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "gtts>=2.5.4",
    "openai-agents>=0.0.15",
    "pillow>=11.2.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "speechrecognition>=3.14.3",
    "streamlit>=1.45.1",
]
